--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
         "@tailwindcss/typography": "^0.5.0",
         "autoprefixer": "^10.4.7",
         "axios": "^1.1.2",
+        "laravel-echo": "^1.17.1",
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.14",
+        "pusher-js": "^8.4.0-rc2",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
     }
