--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "pusher-js": "^8.4.0-rc2",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "dayjs": "^1.11.13"
     }
 }
